--- a/_config.yml
+++ b/_config.yml
@@ -13,23 +13,26 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Andreas Travels
+email: andreas.forslow@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is my travelling blog!
+  I am travelling to Singapore for exchange studies at Nanyang Technological
+  Institute over the Fall of 2017. Being a soon-to-graduate software developer,
+  this is an opportunity for me to both practice coding, as well as sharing my
+  experience!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
-
+twitter_username: AForslow
+github_username:  aforslow
+# excerpt_separator: <!--more-->
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-comments: true
+disqus:
+  shortname: https-aforslow-github-io
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
