--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-disqus:
-  shortname: https-aforslow-github-io
+comments: true
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
