--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,9 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-comments: true
+disqus:
+  hostname: https-aforslow-github-io
+environment: production
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
