--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,8 @@ plugins:
   - jekyll-feed
 disqus:
   shortname: https-aforslow-github-io
-# environment: production
+jekyll:
+  environment: production
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
