--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,9 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-disqus:
-  shortname: https-aforslow-github-io
-# comments: true
+# disqus:
+#   shortname: https-aforslow-github-io
+comments: true
 google_analytics: UA-NNNNNNNN-N
 
 # Exclude from processing.
