--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Andreas Travels
 email: andreas.forslow@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  My name is Andreas Forslöw, and this is my travelling blog!
+  My name is Andreas Forslöw, and this is my NTU travelling blog!
   I am travelling to Singapore for exchange studies at Nanyang Technological
   Institute (NTU) over the Fall of 2017. Being a soon-to-graduate software developer,
   this is an opportunity for me to both practice coding,
