--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: > # this means to ignore newlines until "baseurl:"
   I am travelling to Singapore for exchange studies at Nanyang Technological
   Institute (NTU) over the Fall of 2017. Being a soon-to-graduate software developer,
   this is an opportunity for me to both practice coding,
-  as well as sharing my experience!
+  as well as sharing my travel experiences!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: AForslow
